last commit and terminate bonus project

--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="container">
-        <!--Intestazione-->
-        <header>
-            <div id="header">
-               <figure>
-                   <img src="img/logo.svg" alt="boolean" id="boolean">
-                </figure>
-            </div>
-        </header>
+    <!--Intestazione-->
+    <header>
+        <div>
+           <figure>
+               <img src="img/logo.svg" alt="boolean" id="boolean">
+            </figure>
+        </div>
+    </header>
 
+    <!--Contenitore-->
+    <div id="container">
         <!--Area contenuti-->
         <main>
             <!--Inizio prima sezione-->
